--- a/aboutus.html
+++ b/aboutus.html
@@ -87,27 +87,29 @@
             </div>
             <br>
             <div class="row vertical_content_manage mt-5" >
-                <div class="col-lg-6">
+                <div class="col-lg-6 text-center">
                     <div class="about_header_main mt-3">
-                        <h4 class="about_heading text-capitalize font-weight-bold mt-4">About Our Organisation</h4>
-                        <p class="text-muted mt-3" style="color: black;">The Upcoming African Youth Organization (U.A.Y.O.) is a grassroots youth-led 
-                            youth-serving organization committed to empowering young people and driving positive change in their 
-                            communities. Our organization is dedicated to youth reform through disengagement and reintegration
-                             processes, with the aim of creating a better and more habitable community built upon the hard work and 
-                             resilience of young individuals. At U.A.Y.O., we firmly believe in harnessing the potential and maximizing 
-                             the skills of youth, all while promoting values of resilience and commitment.</p>
-                        <p class="text-muted mt-3" style="color: black;">
-                            Through a diverse range of programs and initiatives, U.A.Y.O. works tirelessly to 
-                            transform the lives of young individuals. We offer digital skills training, engage in
-                             community service projects, promote peace-building activities, and actively participate in 
-                             sustainable environmental initiatives. Our ultimate vision is to foster a society where youth are 
-                             empowered to enhance their living conditions and promote peaceful coexistence. By collaborating with 
-                             young individuals and emphasizing inclusivity, U.A.Y.O. strives to create lasting impact and contribute
-                              to the holistic development of individuals and communities. Together, we can build a brighter future 
-                              for the upcoming generation in Africa and beyond.
-                        </p>
+                      <h4 class="about_heading text-capitalize font-weight-bold mt-4">About Our Organisation</h4>
+                      <p class="text-muted mt-3" style="color: black;">The Upcoming African Youth Organization (U.A.Y.O.) is a grassroots youth-led 
+                        youth-serving organization committed to empowering young people and driving positive change in their 
+                        communities. Our organization is dedicated to youth reform through disengagement and reintegration
+                        processes, with the aim of creating a better and more habitable community built upon the hard work and 
+                        resilience of young individuals. At U.A.Y.O., we firmly believe in harnessing the potential and maximizing 
+                        the skills of youth, all while promoting values of resilience and commitment.
+                      </p>
+                      <p class="text-muted mt-3" style="color: black;">
+                        Through a diverse range of programs and initiatives, U.A.Y.O. works tirelessly to 
+                        transform the lives of young individuals. We offer digital skills training, engage in
+                        community service projects, promote peace-building activities, and actively participate in 
+                        sustainable environmental initiatives. Our ultimate vision is to foster a society where youth are 
+                        empowered to enhance their living conditions and promote peaceful coexistence. By collaborating with 
+                        young individuals and emphasizing inclusivity, U.A.Y.O. strives to create lasting impact and contribute
+                        to the holistic development of individuals and communities. Together, we can build a brighter future 
+                        for the upcoming generation in Africa and beyond.
+                      </p>
                     </div>
-                </div>
+                  </div>
+                  
                 <div class="col-lg-6">
                     <div class="img_about mt-3"> 
                         <!-- <img src="images/Certificate.jpg" alt="" height="430"  class="img-fluid mx-auto d-block"> -->
