--- a/volunteersForm.html
+++ b/volunteersForm.html
@@ -121,7 +121,7 @@
 
 
         <div class="form-group">
-          <p>Phone number <span>*</span></p>
+          <p>Contact Info<span>*</span></p>
           <span class="icon-case"><i class="fa fa-phone" style="font-size: 25px; padding-top: 20%;"></i></span>
           <input type="text" name="phone" id="number" data-rule="maxlen:10"
             data-msg="Vérifiez votre saisie sur les champs : Le champ 'Téléphone' doit être renseigné. Minimum 10 chiffres" />
@@ -130,7 +130,7 @@
 
 
         <div class="form-group">
-          <p>What skills can you bring to SGJSS?<span>*</span></p>
+          <p>What Positive impact can you bring to UAYO<span>*</span></p>
           <span class="icon-case"><i class="fas fa-comment" style="font-size: 25px; padding-top: 20%;"></i></span>
           <textarea type="text" name="sujet" id="skills" data-rule="required"></textarea>
           <div class="validation"></div>
@@ -172,7 +172,7 @@
 
 			Email.send({
         SecureToken:"fbf31702-bb7f-4a4e-9c1c-4ccf17ee777f",
-				To: 'maheshdbabar9340@gmail.com',
+				To: 'upcomingafricanyouthorg@gmail.com.com',
 				From: email,
 				Subject: "New message on Volunteers from "+name,
 				Body: Body
@@ -213,7 +213,7 @@
 
                 <div class="grid-item"><a href="index.html">Home</a></div>
                 <div class="grid-item"><a href="projects.html">Our Projects</a></div>
-                <div class="grid-item"><a href="http://sgjss.co.in/">Sgjss.co.in</a></div><br>
+                <div class="grid-item"><a href=""></a></div><br>
                 <div class="grid-item"><a href="privacy.html">Privacy Policy</a></div>
                 <div class="grid-item"><a href="volunteersForm.html">Join Us</a></div>
                 <div class="grid-item"><a href="contactus.html">Contact Us</a></div>
@@ -221,17 +221,17 @@
 
                <div class="grid-item">
               <div class = "social-buttons" style="float:left;">
-                  <a href= "https://www.instagram.com/sgjss_29/" target="_blank"><i class="fab fa-instagram circle-icon"></i></a>
-                  <a href= "https://www.facebook.com/pg/shreegurujambheswarsevasansthan/photos/?ref=page_internal" target="_blank"><i class="fab fa-facebook circle-icon"></i></a>
-                  <a href= "https://api.whatsapp.com/send/?phone=919414334192&text&app_absent=0" target="_blank"><i class="fab fa-whatsapp circle-icon"></i></a><br>
-                  <a href= "https://www.linkedin.com/in/shree-guru-jambeshwar-sewa-sansthan-1106651b3/" target="_blank"><i class="fab fa-linkedin-in circle-icon"></i></a>
-                  <a href= "https://twitter.com/guru_sansthan" target="_blank"><i class="fab fa-twitter circle-icon"></i></a>
+                  <a href= "" target="_blank"><i class="fab fa-instagram circle-icon"></i></a>
+                  <a href= "" target="_blank"><i class="fab fa-facebook circle-icon"></i></a>
+                  <a href= "" target="_blank"><i class="fab fa-whatsapp circle-icon"></i></a><br>
+                  <a href= "" target="_blank"><i class="fab fa-linkedin-in circle-icon"></i></a>
+                  <a href= "" target="_blank"><i class="fab fa-twitter circle-icon"></i></a>
               </div>
           </div>  
           </div>
           <hr>
 
-          <p style="text-align: center;">Copyright © 2021 SGJSS | All rights reserved</p>
+          <p style="text-align: center;">Copyright © 2023 UAYO | All rights reserved</p>
 
       </div>
   </footer>
