--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <body>
 
-  <nav class="navbar navbar-default navbar-fixed-top " style="background-color: #2a2a72;background-image: linear-gradient(315deg, #2a2a72 0%, #009ffd 74%);  padding-top:15px;padding-bottom:15px;">
+  <nav class="navbar navbar-default navbar-fixed-top " style="background-color: RGB(100, 149, 237);background-image: linear-gradient(315deg, #B0E0E6 ,#6495ED);  padding-top:15px;padding-bottom:15px;">
     <div class="container-fluid">
       <div class="navbar-header" style="height:50px; width:auto;">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
