--- a/events.html
+++ b/events.html
@@ -117,14 +117,17 @@
             <div class="col-md-4">
                 <div class="feature-box">
                     <div class="feature-img">
-                        <img src="images/3.jpeg">
+                        <img src="images/CEO.jpg">
                         <div class="price">
-                            <p> 04 Nov 2019 </p>
+                            <p> 04 Nov 2023 </p>
                         </div>
                        
                         <div class="feature-details">
-                            <h4>Health and Checkups Activities</h4>
-                            <p>Even after decades of freedom, India is struggling to provide basic health services to its people. According to government sources, in India 45 children die every hour due to respiratory infections. 1 child dies every 2 minutes due to diarrhoea. And annually, about 2 million children under 5 years of age die due to preventable diseases. Ours is an NGO for health check-up camps in Jaipur. We conduct general health check up programs that helps in diagnosing the exact condition of people. Our program conducts free health check up by well-trained and educated doctors as we know that precaution is better than cure.</p>
+                            <h4>SmartMavuno launch</h4>
+                            <p>SmartMavuno seek to diversify Agriculture to another dimension, it's seeking technologize farming by 
+                                giving farming access to farm produce at their first call.. This is a great achievement to UAYO since  all youth farmers will be able to get market 
+                                for their products before going bad....Join us im our launch.
+                            </p>
                             <div>
                                 <span><i class="fa fa-map-marker"></i>&nbsp;Mathare, Kenya</span>
                 
@@ -153,7 +156,7 @@
   
                   <div class="grid-item"><a href="index.html">Home</a></div>
                   <div class="grid-item"><a href="projects.html">Our Projects</a></div>
-                  <div class="grid-item"><a href="http://sgjss.co.in/">Sgjss.co.in</a></div><br>
+                  <div class="grid-item"><a href="#"></a></div><br>
                   <div class="grid-item"><a href="privacy.html">Privacy Policy</a></div>
                   <div class="grid-item"><a href="volunteersForm.html">Join Us</a></div>
                   <div class="grid-item"><a href="contactus.html">Contact Us</a></div>
@@ -171,7 +174,7 @@
             </div>
             <hr>
   
-            <p style="text-align: center;">Copyright © 2021 SGJSS | All rights reserved</p>
+            <p style="text-align: center;">Copyright © 2021 UAYO | All rights reserved</p>
   
         </div>
     </footer>
