--- a/projects.html
+++ b/projects.html
@@ -103,7 +103,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="thumbnail" style="background-color:#C2C0D4; ">
-            <img src="images/23.jpg" alt="College Alden Seminar" class="img-rounded" style="width:100%; height: 400px;">
+            <img src="images/1.jpeg" alt="" class="img-rounded" style="width:100%; height: 400px;">
             <div class="caption">
               <p
                 style="text-align:center; color:#342d70;  font-family: 'Quicksand', sans-serif; font-size: 2rem; font-weight: 450;padding-top:10px">
@@ -119,7 +119,7 @@
         </div>
         <div class="col-md-4">
           <div class="thumbnail" style="background-color:#C2C0D4; ">
-            <img src="images/24.jpg" alt="College Kolhapur Flood Donation" class="img-rounded"
+            <img src="images/24.jpg" alt="" class="img-rounded"
               style="width:100%; height: 400px;">
             <div class="caption">
               <p
@@ -136,7 +136,7 @@
         </div>
         <div class="col-md-4">
           <div class="thumbnail" style="background-color:#C2C0D4; ">
-            <img src="images/36.jpg" alt="College Alden Seminar" class="img-rounded"
+            <img src="images/36.jpg" alt="" class="img-rounded"
               style="width:100%; height: 400px;">
             <div class="caption">
               <p
@@ -164,7 +164,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="thumbnail" style="background-color:#C2C0D4; ">
-            <img src="images/11.jpg" alt="College Alden Seminar" class="img-rounded" style="width:100%; height: 400px;">
+            <img src="images/11.jpg" alt="" class="img-rounded" style="width:100%; height: 400px;">
             <div class="caption">
               <p
                 style="text-align:center; color:#342d70;  font-family: 'Quicksand', sans-serif; font-size: 2rem; font-weight: 450;padding-top:10px">
@@ -181,7 +181,7 @@
 
         <div class="col-md-4">
           <div class="thumbnail" style="background-color:#C2C0D4; ">
-            <img src="images/14.jpg" alt="College Kolhapur Flood Donation" class="img-rounded"
+            <img src="images/14.jpg" alt="" class="img-rounded"
               style="width:100%; height: 400px;">
             <div class="caption">
               <p
@@ -201,7 +201,7 @@
 
         <div class="col-md-4">
           <div class="thumbnail" style="background-color:#C2C0D4; ">
-            <img src="images/26.jpg" alt="College Blood Donation1" class="img-rounded"
+            <img src="images/26.jpg" alt="" class="img-rounded"
               style="width:100%; height: 400px;">
             <div class="caption">
               <p
@@ -228,7 +228,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="thumbnail" style="background-color:#C2C0D4; ">
-            <img src="images/7.jpg" alt="College Alden Seminar" class="img-rounded" style="width:100%; height: 400px;">
+            <img src="images/7.jpg" alt="" class="img-rounded" style="width:100%; height: 400px;">
             <div class="caption">
               <p
                 style="text-align:center; color:#342d70;  font-family: 'Quicksand', sans-serif; font-size: 2rem; font-weight: 450;padding-top:10px">
@@ -247,7 +247,7 @@
         </div>
         <div class="col-md-4">
           <div class="thumbnail" style="background-color:#C2C0D4; ">
-            <img src="images/27.jpg" alt="College Blood Donation1" class="img-rounded"
+            <img src="images/27.jpg" alt="" class="img-rounded"
               style="width:100%; height: 400px;">
             <div class="caption">
               <p
@@ -266,7 +266,7 @@
 
         <div class="col-md-4">
           <div class="thumbnail" style="background-color:#C2C0D4; ">
-            <img src="images/25.jpg" alt="College Kolhapur Flood Donation" class="img-rounded"
+            <img src="images/25.jpg" alt="" class="img-rounded"
               style="width:100%; height: 400px;">
             <div class="caption">
               <p
