--- a/projects.html
+++ b/projects.html
@@ -119,7 +119,7 @@
         </div>
         <div class="col-md-4">
           <div class="thumbnail" style="background-color:#C2C0D4; ">
-            <img src="images/24.jpg" alt="" class="img-rounded"
+            <img src="images/33.jpg" alt="" class="img-rounded"
               style="width:100%; height: 400px;">
             <div class="caption">
               <p
@@ -141,15 +141,9 @@
             <div class="caption">
               <p
                 style="text-align:center; color:#342d70;  font-family: 'Quicksand', sans-serif; font-size: 2rem; font-weight: 450;padding-top:10px">
-                PMGDISHA</p>
+                Youth Fund</p>
               <hr>
-              <p style="text-align:center; font-size:15px;">The SGJSS is working on PMGDISHA Project. “Digital India is
-                our dream for the nation. When I say ‘Digital India’, it is not meant for the rich but for those who are
-                poor”.
-
-                Pradhan Mantri Gramin Digital Saksharta Abhiyaan(PMGDISHA) scheme aims to make six crore persons in a
-                rural area, across States/UTs, digitally literate, reaching to around 40% of rural households by
-                covering one member from every eligible household.</p>
+              <p style="text-align:center; font-size:15px;">Youth funding seek</p>
             </div>
           </div>
         </div>
@@ -181,7 +175,7 @@
 
         <div class="col-md-4">
           <div class="thumbnail" style="background-color:#C2C0D4; ">
-            <img src="images/14.jpg" alt="" class="img-rounded"
+            <img src="images/13.jpg" alt="" class="img-rounded"
               style="width:100%; height: 400px;">
             <div class="caption">
               <p
@@ -201,7 +195,7 @@
 
         <div class="col-md-4">
           <div class="thumbnail" style="background-color:#C2C0D4; ">
-            <img src="images/26.jpg" alt="" class="img-rounded"
+            <img src="images/33.jpg" alt="" class="img-rounded"
               style="width:100%; height: 400px;">
             <div class="caption">
               <p
@@ -228,7 +222,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="thumbnail" style="background-color:#C2C0D4; ">
-            <img src="images/7.jpg" alt="" class="img-rounded" style="width:100%; height: 400px;">
+            <img src="images/11.jpg" alt="" class="img-rounded" style="width:100%; height: 400px;">
             <div class="caption">
               <p
                 style="text-align:center; color:#342d70;  font-family: 'Quicksand', sans-serif; font-size: 2rem; font-weight: 450;padding-top:10px">
@@ -247,7 +241,7 @@
         </div>
         <div class="col-md-4">
           <div class="thumbnail" style="background-color:#C2C0D4; ">
-            <img src="images/27.jpg" alt="" class="img-rounded"
+            <img src="images/31.jpg" alt="" class="img-rounded"
               style="width:100%; height: 400px;">
             <div class="caption">
               <p
@@ -266,7 +260,7 @@
 
         <div class="col-md-4">
           <div class="thumbnail" style="background-color:#C2C0D4; ">
-            <img src="images/25.jpg" alt="" class="img-rounded"
+            <img src="images/35.jpeg" alt="" class="img-rounded"
               style="width:100%; height: 400px;">
             <div class="caption">
               <p
