--- a/projects.html
+++ b/projects.html
@@ -103,17 +103,14 @@
       <div class="row">
         <div class="col-md-4">
           <div class="thumbnail" style="background-color:#C2C0D4; ">
-            <img src="images/1.jpeg" alt="" class="img-rounded" style="width:100%; height: 400px;">
+            <img src="images/3.jpeg" alt="" class="img-rounded" style="width:100%; height: 400px;">
             <div class="caption">
               <p
                 style="text-align:center; color:#342d70;  font-family: 'Quicksand', sans-serif; font-size: 2rem; font-weight: 450;padding-top:10px">
                 Women Empowerment</p>
               <hr>
-              <p style="text-align:center; font-size:15px;">In agrarian society male-female are like Beljodi of Hal
-                (Bullock pair of a plough). In such situation both should be well versed with all the technological
-                complexities and options for family livelihood. In the operational area of RBKS the status of women in
-                society was pathetic. Impact of long socialization processes and lacks of control over financial sources
-                the status of women in society continued to move down. </p>
+              <p style="text-align:center; font-size:15px;">Let's all give women equal opportunities in the socities 
+              they're humans too and they deserve the best in the society.</p>
             </div>
           </div>
         </div>
@@ -126,24 +123,22 @@
                 style="text-align:center; color:#342d70;  font-family: 'Quicksand', sans-serif; font-size: 2rem; font-weight: 450;padding-top:10px">
                 Education</p>
               <hr>
-              <p style="text-align:center; font-size:15px;">We believe that the purpose of education is to make the
-                child a self-motivated and independent learner. SGJSS strives to develop educational opportunities for
-                all children based on this idea. SGJSS conducts the IEC activities for awaking people about importance
-                of education through following activities: 1. Community Mobilization and Awareness Activities
-                2. School Bag & Dresses Distribution to BPL Children</p>
+              <p style="text-align:center; font-size:15px;">An educated community is free from such factors such as violence,
+              schools/education do away with illeteracy helping our society grow much</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="thumbnail" style="background-color:#C2C0D4; ">
-            <img src="images/36.jpg" alt="" class="img-rounded"
+            <img src="images/32.jpg" alt="" class="img-rounded"
               style="width:100%; height: 400px;">
             <div class="caption">
               <p
                 style="text-align:center; color:#342d70;  font-family: 'Quicksand', sans-serif; font-size: 2rem; font-weight: 450;padding-top:10px">
                 Youth Fund</p>
               <hr>
-              <p style="text-align:center; font-size:15px;">Youth funding seek</p>
+              <p style="text-align:center; font-size:15px;">Youth funding seek to invest on youth, youths have 
+              all the ability to become very responsible indivual in the society</p>
             </div>
           </div>
         </div>
@@ -164,11 +159,8 @@
                 style="text-align:center; color:#342d70;  font-family: 'Quicksand', sans-serif; font-size: 2rem; font-weight: 450;padding-top:10px">
                 Agricultural Program</p>
               <hr>
-              <p style="text-align:center; font-size:15px;">Farming has always been one of the most important economic
-                activities in India. With about 2/3rd of the population engaged in agriculture and agriculture-related
-                activities, it is important to understand the plight of farmers in India. According to a statement by
-                the Maharashtra government in 2018, 639 Indian farmers committed suicide within 3 months due to drought
-                and debts. Farmers need to be educated about the schemes and grants provided by the government. </p>
+              <p style="text-align:center; font-size:15px;">We seek to diversify agriculture in kenya and africa at large,
+              this is a step by step actvivty but we'll be there no matter what!! </p>
             </div>
           </div>
         </div>
@@ -182,13 +174,8 @@
                 style="text-align:center; color:#342d70;  font-family: 'Quicksand', sans-serif; font-size: 2rem; font-weight: 450;padding-top:10px">
                 Skills Developement</p>
               <hr>
-              <p style="text-align:center; font-size:15px;">Majority of India’s population still lives in the villages.
-                The numbers of youths are also increasing in the villages. The number of youth is increasing faster than
-                the rate of job creation. Youths are considered as the future of any nation.The youth comprises over
-                one-third of the Indian population which in turn constitutes a major part of the labor force of the
-                country. The number of underprivileged youth in India who lack education and proper guidance is
-                humungous.
-                It is not their lack of knowledge that is the reason for this.</p>
+              <p style="text-align:center; font-size:15px;">Technological skills must also be available to youths and the vulnerable
+              in the society, we seek to partner with different stakeholders to promote this.</p>
             </div>
           </div>
         </div>
