--- a/projects.html
+++ b/projects.html
@@ -189,15 +189,11 @@
                 style="text-align:center; color:#342d70;  font-family: 'Quicksand', sans-serif; font-size: 2rem; font-weight: 450;padding-top:10px">
                 Child Welfare</p>
               <hr>
-              <p style="text-align:center; font-size:15px;">SGJSS aims towards lasting improvements in the quality of
-                life of disadvantage and marginalised children living in abject poverty and injustice with focus towards
-                protection and promotion of rights, interests and dignity of children. Our approach to child development
-                seeks to simultaneously address to physical, emotional, and spiritual aspects of a child’s life. Thus
-                all child development programmes incorporate a variety of approaches to help educate and grow children
-                in to healthy sustainable adults</p>
+              <p style="text-align:center; font-size:15px;">Children deserve everthing in this life, they're the future of tomorrow
+              so we need to take care of the them. </p>
             </div>
           </div>
-        </div>
+        </div>We can do this by giving them access to food, clothing, education and shelter
       </div>
     </div>
 
@@ -215,13 +211,8 @@
                 style="text-align:center; color:#342d70;  font-family: 'Quicksand', sans-serif; font-size: 2rem; font-weight: 450;padding-top:10px">
                 Old Age Welfare</p>
               <hr>
-              <p style="text-align:center; font-size:15px;">We work for old age society as we know that majority of 71%
-                of the elderly population lives in rural India and 29% in the urban. Factors like literacy level,
-                economic independence, age-old dependency ratio, diseases and other health impacts vary.
-  
-                With rapid urbanisation and a shift in socio-economic priorities, traditional family structures and
-                values have changed. Meager old age pensions provided by the government (Rs. 200 per month in many
-                states barring few like Goa where it is Rs. 2000) are insufficient.
+              <p style="text-align:center; font-size:15px;">Those from 71 years and above will be given access to certain services 
+                such as Healthcare, shelter and clothing from well wishers
               </p>
             </div>
           </div>
