--- a/projects.html
+++ b/projects.html
@@ -228,10 +228,7 @@
               <hr>
               <p style="text-align:center; font-size:15px;">Due to lack of hygienic awareness, gender issues,
                 superstitions, etc. several health related problems exist in the working area including higher
-                mortality.Hence to improve health conditions, SGJSS promoted community meetings, foot marches (Pad
-                Yatra), health check up awareness camps. Micro planning was done to know frequency of diseases and
-                paying capabilities of the people. During this period mainly work for women reproductive health and
-                child health was done. Social mapping was done to locate and reach people.</p>
+                mortality.Hence to improve health conditions.</p>
             </div>
           </div>
         </div>
@@ -245,12 +242,8 @@
                 style="text-align:center; color:#342d70;  font-family: 'Quicksand', sans-serif; font-size: 2rem; font-weight: 450;padding-top:10px">
                 Environment</p>
               <hr>
-              <p style="text-align:center; font-size:15px;">The forests of India are ancient in nature and composition.
-                SGJSS is providing wildlife education to the community. Because, they are rich in variety and shelter a
-                wide range of flora and fauna and insects. The fact they have existed from time immemorial is
-                substantiated from the ancient texts all of which have some mention of the forests. The people venerated
-                forests and a large number of religious ceremonies centered on trees and plants.The wildlife helps us in
-                maintaining the ‘balance of nature’.</p>
+              <p style="text-align:center; font-size:15px;">The forests of Kenya are ancient in nature and composition. we provide different ways to protect 
+              them from human activities that are deminishing</p>
 
             </div>
           </div>
